Bug 53909 - FILEOPEN Word 97-2003 DOC structure as exported by Apple Pages is not recognized
Summary: FILEOPEN Word 97-2003 DOC structure as exported by Apple Pages is not recognized
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.5.6.2 release
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.0.0 target:3.6.4 target:...
Keywords: regression
: 54985 57331 57535 57671 57689 57787 58063 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-08-22 05:48 UTC by Volker Helbing
Modified: 2012-12-17 21:48 UTC (History)
16 users (show)

See Also:
Crash report or crash signature:


Attachments
DOC file that can not be viewed in LO (20.50 KB, application/msword)
2012-09-19 10:54 UTC, Mirosław Zalewski
Details
PDF file with the same content as DOC file, as reference (40.18 KB, application/pdf)
2012-09-19 10:54 UTC, Mirosław Zalewski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Helbing 2012-08-22 05:48:31 UTC
Problem description: 

Steps to reproduce:
Try to open a "Pages" text document that has been exported as .doc-file.


Current behavior:
LibreOffice doesn't recognize it; instead, a window "ASCII Filter Optionen" appears, asking me abaut the font, language etc. of the file. 
Expected behavior:

Until August 19 (or 20) - i.e. before I installed the last programm update – LibreOffice had no problem to open doc files exported from Pages.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:14.0) Gecko/20100101 Firefox/14.0.1

Thank you for attending for the problem.
Volker
Comment 1 Mirosław Zalewski 2012-09-19 10:54:01 UTC
Created attachment 67372 [details]
DOC file that can not be viewed in LO

I am attaching problematic DOC file, possibly related by this issue. 
PDF with the same content (also attached) states that it was generated using Apple Pages. I tried contacting document author to confirm that DOC was also created using Pages, but I did not receive any reply.

LibreOffice fails to open this file no matter what filter I choose. It just display dozens of pages with rubbish characters. I have tried LO 3.6.1 on Linux and Windows and 3.5.6 on Linux.
MS Word 2007 opens it flawlessly :( .
Comment 2 Mirosław Zalewski 2012-09-19 10:54:48 UTC
Created attachment 67373 [details]
PDF file with the same content as DOC file, as reference
Comment 3 ljelly 2012-09-24 05:42:49 UTC
This issue only started occurring in August 2012. Before then documents could open in LibreOffice. 
Same problem with documents being opened from icloud.com files are downloaded as a .doc format but do not open in LibreOffice. Instead they are scrambled with ASCII Filter Options which wreck the entire Document. 
This problem also occurs for documents being downloaded as a .xls format from numbers on icloud.com. It does not occur with PowerPoint ppt files. 

Ubuntu Linux 12.10 beta 1 64-bit LibreOffice build version 3.6.1.2 build ID: 360m1(Build:2))
ljelly
Comment 4 Alex Thurgood 2012-10-06 09:29:43 UTC
Confirming that the DOC file opens fine in LO 3.5.4.2 on Linux 32bit
Comment 5 ljelly 2012-10-11 00:16:19 UTC
does not open in Libreoffice:
Build Info
tinderbox: administrator: fridrich.strba@bluewin.ch
tinderbox: buildname: Linux-x86_64_11-Release-Configuration
tinderbox: tree: libreoffice-3-6
tinderbox: pull time 2012-10-09 20:29:29
tinderbox: git sha1s
core:d126dcfe359782a6229156f7cbdb20e642b63a5e
Comment 6 sasha.libreoffice 2012-11-10 09:27:29 UTC
Opening first attachment:
[correctly opens] 3.4.2, 3.5.0 beta3, 3.5.1.2 on Windows XP 32 bit
[wrong opens] 3.5.7, 3.6.3 on RFR 64 bit, 3.6.3 on Windows XP

according to my measurements, it is regression
Comment 7 Dave Firth 2012-11-11 00:02:26 UTC
File does not open on LO 3.6.3.2 (Build ID: 58f22d5) on Linux 64-bit. I can confirm that this same behavior has been happening for me with LO for quite a while on 32 bit also. I am curious that someone got it to read in 3.5, as my Linux copies of LO have been unable to work with my exported Pages docs for about a year.

File opens fine on NeoOffice (Mac) 3.3 patch 2.

File opens fine in Apple Pages 2009.

I didn't send this particular attached file to Google docs, but I sent one I exported from Pages as a Word doc to GD earlier this week and GD can read the exported Pages and iCloud Word files where LO cannot. BTW, downloading one of these files back from GD seems to clean whatever offending content bars opening the original. I can open my GD-downloaded files in LO.
Comment 8 Dave Firth 2012-11-11 00:23:11 UTC
Retracting my "about a year" -- I don't remember LO on Linux ever working for me with these exported docs. I used OO before LO and my recollection is that on Linux it had problems, also.

I've "laundered" the docs using NeoOffice before. My Google docs discovery was very recent.
Comment 9 Toon 2012-11-18 09:04:58 UTC
Hi, I would like to confirm this problem.
Appearently Apple iWork creates DOC files in the 97-2003 binary Word format.
This is the output of the 'file' command:

factuur 20120829.doc: Composite Document File V2 Document, Little Endian, Os: Windows, Version 5.0, Code page: 0

I'm running Libreoffice on Gentoo Linux (I compile it myself).
6 weeks ago I could successfully open this type of documents, but now I can't anymore.

Below is the recent upgrade-history on my desktop machine:

     Fri Aug 31 22:06:02 2012 >>> app-office/libreoffice-3.5.5.3
     Fri Aug 31 22:06:23 2012 >>> app-office/libreoffice-l10n-3.5.5
     Sat Oct 13 17:49:50 2012 >>> app-office/libreoffice-3.5.6.2
     Sat Oct 13 17:50:10 2012 >>> app-office/libreoffice-l10n-3.5.6
     Sat Oct 27 20:02:22 2012 >>> app-office/libreoffice-l10n-3.5.7
     Wed Nov 14 16:19:30 2012 >>> app-office/libreoffice-3.5.7.2

Version 3.5.5.3 could certainly open the 'pages'.
I'm not sure whether I ever opened such a file with version 3.5.6.2
Version 3.5.7.2 doesn't work. When opening a binary 97-2003 Word file the ASCII filter dialog box is presented.

So it appears to be a regression indeed.
I hope this helps.
Regards,
Toon.
Comment 10 Urmas 2012-11-18 13:14:35 UTC
Setting version back to the one apparently causing this regression.
Comment 11 Stephan van den Akker 2012-11-20 20:43:04 UTC
Document is still garbled when opened with LOdev version 4.0.0.0.alpha0+ (Build ID: 67fca3), pulled 19 November 2012.

Yesterday over at the #libreoffice irc channel I promised kdjfn to bisect this issue. It now appears that my Ubuntu install (version 10.4) is too old to run the 3.6 bisect. Sorry about that...
Comment 12 Urmas 2012-11-22 03:15:50 UTC
*** Bug 57331 has been marked as a duplicate of this bug. ***
Comment 13 Urmas 2012-11-22 03:17:40 UTC
Structured storage is not a component where one can allow regressions.
Comment 14 Roman Eisele 2012-11-22 17:32:20 UTC
Definitely a regression; I can confirm (for the Mac OS X versions of LibO), that the file still openes correcly with
* 3.5.0
* 3.5.1rc2
* ...
* 3.5.5.3

But not with

* 3.5.6.2
* 3.5.7.1
* 3.6.0.4

So this bug was introduced somewhere in the 3.6 development process (because it already appears in 3.6.0[.4]) and then backported to the 3.5 branch, between the releases of 3.5.5.3 and 3.5.6.2. This is a fairly limited commit range to check.

-> Set the Version picker to the number of the 1st version which is known to contain the bug (3.5.6.2), as usual.

About the Importance field:
I am sorry to say so but AFAIK this kind of bug is not a “blocker” (we use that severity value very very rarely, only if a build does not work at all, etc.), just “critical”.

But this is definitely a good candidate for our “Most annoying bugs” lists, and theses lists are much more important than the Importance field, so I will add this bug there.
Comment 16 Not Assigned 2012-11-22 22:36:05 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef9f9b750eac2966634c385a2021716c4de0e4cd

Resolves: fdo#53909 STG_FREE sector locations rejected



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Not Assigned 2012-11-22 22:41:44 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2036d4ec1133c337d1f47334a1a2d558b61dc70

Related: fdo#53909 add regression test



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Caolán McNamara 2012-11-22 23:31:24 UTC
fix submitted for review for 3-6, 3-6-4. 3-5 is a dead tree now
Comment 19 sasha.libreoffice 2012-11-23 06:12:58 UTC
Thanks for so quick fixing this bug
Comment 20 Not Assigned 2012-11-23 07:52:40 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d99c7edff18fb84312928589d3639d0005c23bbe&g=libreoffice-3-6

Resolves: fdo#53909 STG_FREE sector locations rejected


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Roman Eisele 2012-11-23 08:06:48 UTC
@ Caolán:
Thank you, too, for fixing this annoying issue so fast!

(In reply to comment #18)
> fix submitted for review for 3-6, 3-6-4. 3-5 is a dead tree now

Is 3.5 really completely dead? There are still important bug fixes submitted to that branch, and this one is an inportant bug fix, of course ... If in doubt, please ask Michael Meeks who has, IIRC, advocated more than once submitting important bug fixes to the 3.5 branch. (But correct me if the wind has changed again, and even Michael Meeks does no longer suggest to commit anything to the 3.5 branch!)
Comment 22 Not Assigned 2012-11-24 14:21:07 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d3a46db1103fcec615fc9dcb60b13b09c90614a4&g=libreoffice-3-6-4

Resolves: fdo#53909 STG_FREE sector locations rejected


It will be available already in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 Not Assigned 2012-11-24 14:37:52 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4a27bce9c49539c942af27b180ba22f83a12d8e1&g=libreoffice-3-5

Resolves: fdo#53909 STG_FREE sector locations rejected


It will be available in LibreOffice 3.5.8.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Urmas 2012-11-29 09:40:56 UTC
*** Bug 57535 has been marked as a duplicate of this bug. ***
Comment 25 Roman Eisele 2012-11-29 10:01:18 UTC
*** Bug 57671 has been marked as a duplicate of this bug. ***
Comment 26 Roman Eisele 2012-11-29 10:03:28 UTC
@ Caolán:

(In reply to comment #23)
> Caolan McNamara committed a patch related to this issue.
> It has been pushed to "libreoffice-3-5": [...]
> It will be available in LibreOffice 3.5.8.

Thank you for pushing this to the 3.5 branch, too!
Comment 27 Urmas 2012-11-30 00:04:07 UTC
*** Bug 57689 has been marked as a duplicate of this bug. ***
Comment 28 Urmas 2012-12-03 07:03:40 UTC
*** Bug 57787 has been marked as a duplicate of this bug. ***
Comment 29 Urmas 2012-12-10 11:19:21 UTC
*** Bug 58071 has been marked as a duplicate of this bug. ***
Comment 30 Urmas 2012-12-11 14:22:29 UTC
*** Bug 54985 has been marked as a duplicate of this bug. ***
Comment 31 Roman Eisele 2012-12-13 09:06:11 UTC
VERIFIED as FIXED both with

* LibreOffice 3.6.4.3 (Build ID: 2ef5aff)
* Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
  TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0,
  Time: 2012-12-05_22:13:37

on Mac OS X (10.6.8, Intel). The sample .doc file now opens correctly.


@ Caolán:
Thank you very much for fixing this bug!
Comment 32 Michael Stahl (allotropia) 2012-12-17 13:10:52 UTC
*** Bug 58063 has been marked as a duplicate of this bug. ***
Comment 33 Michael Stahl (allotropia) 2012-12-17 21:48:45 UTC
*** Bug 54985 has been marked as a duplicate of this bug. ***