Resolves: fdo#53909 STG_FREE sector locations rejected

(cherry picked from commit ef9f9b750eac2966634c385a2021716c4de0e4cd)

Conflicts:
	sot/source/sdstor/stgelem.cxx

Reviewed-on: https://gerrit.libreoffice.org/1150
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Stephan Bergmann <sbergman@redhat.com>
Signed-off-by: Michael Meeks <michael.meeks@suse.com>

Conflicts:

	sot/source/sdstor/stgelem.cxx

Change-Id: I6f71c7e3cfeeba8a76096d5be68838b8d401c580